Cleanup code
* use constants where possible
* refactor to avoid code duplicates